Add a pause building button for mobile

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -5,3 +5,5 @@ adminbutton2.admindialog.send_random_message = Оптравить случайн
 adminbutton2.admindialog.send_secret_message = Отправить секретное сообщение
 adminbutton2.admindialog.title = Кнопка администратора
 adminbutton2.message_list.title = Список сообщений
+adminbutton2.pause_building = Приостановить
+
