Simpler admin dialog. Move secrets to its own dialog

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -6,4 +6,5 @@ adminbutton2.admindialog.send_secret_message = Отправить секретн
 adminbutton2.admindialog.title = Кнопка администратора
 adminbutton2.message_list.title = Список сообщений
 adminbutton2.pause_building = Приостановить
+adminbutton2.secrets.title = Секреты
 
