Add player controllers

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -4,6 +4,9 @@ adminbutton2.admindialog.secret_message = Секретное сообщение
 adminbutton2.admindialog.send_random_message = Оптравить случайное сообщение
 adminbutton2.admindialog.send_secret_message = Отправить секретное сообщение
 adminbutton2.admindialog.title = Кнопка администратора
+adminbutton2.controller.automatic_movement = Автоматическое движение
+adminbutton2.controller.automatic_movement.mine = Добывать
+adminbutton2.controller.title = Управление игроком
 adminbutton2.message_list.title = Список сообщений
 adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.title = Секреты
