Make AdminChatFragment optional and load it differently

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -10,6 +10,7 @@ adminbutton2.controller.title = Управление игроком
 adminbutton2.message_list.title = Список сообщений
 adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.title = Секреты
+adminbutton2.settings.override_chatfrag = Использовать ChatFragment из мода
 adminbutton2.settings.override_input_handler = Использовать InputHandler из мода
 adminbutton2.settings.pause_building_button = Кнопка для приостановления строительства
 
