Add image generator that uses sorter block

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -7,6 +7,11 @@ adminbutton2.admindialog.title = Кнопка администратора
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
 adminbutton2.controller.title = Управление игроком
+adminbutton2.imagegenerator.generate = Сгенерировать
+adminbutton2.imagegenerator.selectimage = Выбрать картинку
+adminbutton2.imagegenerator.size = Ширина: {0}, Высота: {1}
+adminbutton2.imagegenerator.title = Генератор картинок
+adminbutton2.imagegenerator.toolarge = Схема слишком большая. Она не будет сохранена и может привести к неожиданному окончанию игры
 adminbutton2.message_list.title = Список сообщений
 adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.title = Секреты
