Add admin panel

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -1,3 +1,5 @@
+adminbutton2.adminbutton.adminpanel.button.drag = Тянуть панель
+adminbutton2.adminbutton.adminpanel.button.row = Новый ряд
 adminbutton2.admindialog.icon_chooser.title = Выбиратель иконки
 adminbutton2.admindialog.message_above_limit = Длина окончательного сообщения больше предельной длины сообщения
 adminbutton2.admindialog.secret_message = Секретное сообщение
@@ -6,6 +8,7 @@ adminbutton2.admindialog.send_secret_message = Отправить секретн
 adminbutton2.admindialog.title = Кнопка администратора
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
+adminbutton2.controller.enable_controller = Включить управление
 adminbutton2.controller.title = Управление игроком
 adminbutton2.imagegenerator.generate = Сгенерировать
 adminbutton2.imagegenerator.selectimage = Выбрать картинку
@@ -13,6 +16,7 @@ adminbutton2.imagegenerator.size = Ширина: {0}, Высота: {1}
 adminbutton2.imagegenerator.title = Генератор картинок
 adminbutton2.imagegenerator.toolarge = Схема слишком большая. Она не будет сохранена и может привести к неожиданному окончанию игры
 adminbutton2.message_list.title = Список сообщений
+adminbutton2.panelconfig.title = Настроить панель
 adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.title = Секреты
 adminbutton2.settings.override_chatfrag = Использовать ChatFragment из мода
