Add push player controller

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -9,6 +9,9 @@ adminbutton2.admindialog.title = Кнопка администратора
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
 adminbutton2.controller.enable_controller = Включить управление
+adminbutton2.controller.push_player = Двигать игрока
+adminbutton2.controller.push_player.push_from_behind = Двигать сзади
+adminbutton2.controller.push_player.push_to_coordinates = Двигать к координатам
 adminbutton2.controller.title = Управление игроком
 adminbutton2.imagegenerator.generate = Сгенерировать
 adminbutton2.imagegenerator.selectimage = Выбрать картинку
