Add a command handler with commands "help", "js" and "sc"

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -6,6 +6,12 @@ adminbutton2.admindialog.secret_message = Секретное сообщение
 adminbutton2.admindialog.send_random_message = Оптравить случайное сообщение
 adminbutton2.admindialog.send_secret_message = Отправить секретное сообщение
 adminbutton2.admindialog.title = Кнопка администратора
+adminbutton2.command.error.few_arguments = [scarlet]Команда [white]{0}[] принимает [white]больше[] аргументов.
+adminbutton2.command.error.many_arguments = [scarlet]Команда [white]{0}[] принимает [white]меньше[] аргументов.
+adminbutton2.command.help.description = Показать диалог который показывает все команды.
+adminbutton2.command.help.dialog.title = Команды
+adminbutton2.command.js.description = Выполнить JavaScript код.
+adminbutton2.command.sc.description = Отправить секретное/случайное сообщение через чат.
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
 adminbutton2.controller.enable_controller = Включить управление
