--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -6,6 +6,12 @@ adminbutton2.admindialog.secret_message = Секретное сообщение
 adminbutton2.admindialog.send_random_message = Оптравить случайное сообщение
 adminbutton2.admindialog.send_secret_message = Отправить секретное сообщение
 adminbutton2.admindialog.title = Кнопка администратора
+adminbutton2.autofill.core_minimum_request_amount = Минимальное количество предметов в ядре
+adminbutton2.autofill.enabled = Включить AutoFill
+adminbutton2.autofill.fill_only_selected_buildings = Заполнять только выбранные постройки (AutoFill)
+adminbutton2.autofill.interaction_cooldown = Время ожидания перед взаимодействием
+adminbutton2.autofill.select_buildings = Выбирать постройки для AutoFill
+adminbutton2.autofill_config.title = Настроить AutoFill
 adminbutton2.command.error.few_arguments = [scarlet]Команда [white]{0}[] принимает [white]больше[] аргументов.
 adminbutton2.command.error.many_arguments = [scarlet]Команда [white]{0}[] принимает [white]меньше[] аргументов.
 adminbutton2.command.help.description = Показать диалог который показывает все команды.
