--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -6,10 +6,8 @@ adminbutton2.admindialog.secret_message = Секретное сообщение
 adminbutton2.admindialog.send_random_message = Оптравить случайное сообщение
 adminbutton2.admindialog.send_secret_message = Отправить секретное сообщение
 adminbutton2.admindialog.title = Кнопка администратора
-adminbutton2.autofill.core_minimum_request_amount = Минимальное количество предметов в ядре
 adminbutton2.autofill.enabled = Включить AutoFill
 adminbutton2.autofill.fill_only_selected_buildings = Заполнять только выбранные постройки (AutoFill)
-adminbutton2.autofill.interaction_cooldown = Время ожидания перед взаимодействием
 adminbutton2.autofill.select_buildings = Выбирать постройки для AutoFill
 adminbutton2.autofill_config.title = Настроить AutoFill
 adminbutton2.command.error.few_arguments = [scarlet]Команда [white]{0}[] принимает [white]больше[] аргументов.
@@ -34,7 +32,9 @@ adminbutton2.message_list.title = Список сообщений
 adminbutton2.panelconfig.title = Настроить панель
 adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.title = Секреты
-adminbutton2.settings.override_chatfrag = Использовать ChatFragment из мода
-adminbutton2.settings.override_input_handler = Использовать InputHandler из мода
-adminbutton2.settings.pause_building_button = Кнопка для приостановления строительства
+setting.adminbutton2.autofill.core_minimum_request_amount.name = Минимальное количество предметов в ядре
+setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Время ожидания перед взаимодействием
+setting.adminbutton2.settings.override_chatfrag.name = Использовать ChatFragment из мода
+setting.adminbutton2.settings.override_input_handler.name = Использовать InputHandler из мода
+setting.adminbutton2.settings.pause_building_button.name = Кнопка для приостановления строительства
 
