Add an ability to send secret messages over message buildings

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -16,6 +16,8 @@ adminbutton2.command.help.description = Показать диалог котор
 adminbutton2.command.help.dialog.title = Команды
 adminbutton2.command.js.description = Выполнить JavaScript код.
 adminbutton2.command.sc.description = Отправить секретное/случайное сообщение через чат.
+adminbutton2.command.sm.description = Оптравить секретное сообщение через выбранную постройку.
+adminbutton2.communication.selectBuilding = Постройка не выбрана. Что бы выбрать постройку нужно нажать на ее. Можно выбрать только блоки сообщения.
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
 adminbutton2.controller.enable_controller = Включить управление
