--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -33,6 +33,7 @@ adminbutton2.imagegenerator.toolarge = Схема слишком большая.
 adminbutton2.message_list.title = Список сообщений
 adminbutton2.panelconfig.title = Настроить панель
 adminbutton2.pause_building = Приостановить
+adminbutton2.secrets.chat_warning = Эта кнопка отправляет сообщения в чат
 adminbutton2.secrets.title = Секреты
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Минимальное количество предметов в ядре
 setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Время ожидания перед взаимодействием
