Add an option to allow saving build plans when changing units

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -41,4 +41,5 @@ setting.adminbutton2.commands.prefix.name = Префикс для команд
 setting.adminbutton2.settings.override_chatfrag.name = Использовать ChatFragment из мода
 setting.adminbutton2.settings.override_input_handler.name = Использовать InputHandler из мода
 setting.adminbutton2.settings.pause_building_button.name = Кнопка для приостановления строительства
+setting.adminbutton2.settings.plan_saver.enabled.name = Сохранять строительные планы при смене еденицы
 
