Replace message list dialog with new chat dialog in admin dialog.

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -10,6 +10,10 @@ adminbutton2.autofill.enabled = Включить AutoFill
 adminbutton2.autofill.fill_only_selected_buildings = Заполнять только выбранные постройки (AutoFill)
 adminbutton2.autofill.select_buildings = Выбирать постройки для AutoFill
 adminbutton2.autofill_config.title = Настроить AutoFill
+adminbutton2.chatdialog.example_message = Пример сообщения
+adminbutton2.chatdialog.messagePostfix = Постфикс
+adminbutton2.chatdialog.messagePrefix = Префикс
+adminbutton2.chatdialog.title = Чат
 adminbutton2.command.error.few_arguments = [scarlet]Команда [white]{0}[] принимает [white]больше[] аргументов.
 adminbutton2.command.error.many_arguments = [scarlet]Команда [white]{0}[] принимает [white]меньше[] аргументов.
 adminbutton2.command.help.description = Показать диалог который показывает все команды.
