--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -19,6 +19,8 @@ adminbutton2.command.error.many_arguments = [scarlet]Команда [white]{0}[]
 adminbutton2.command.help.description = Показать диалог который показывает все команды.
 adminbutton2.command.help.dialog.title = Команды
 adminbutton2.command.js.description = Выполнить JavaScript код.
+adminbutton2.command.linknodes.description = Подключить неподключенные постройки к узлам.
+adminbutton2.command.linknodes.new_links = Создано {0} новых подключений
 adminbutton2.command.sc.description = Отправить секретное/случайное сообщение через чат.
 adminbutton2.command.sm.description = Оптравить секретное сообщение через выбранную постройку.
 adminbutton2.command.smt.description = Переключить режим отправления сообщеней через выбранную постройку.
@@ -41,8 +43,8 @@ adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.chat_warning = Эта кнопка отправляет сообщения в чат
 adminbutton2.secrets.title = Секреты
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Минимальное количество предметов в ядре
-setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Время ожидания перед взаимодействием
 setting.adminbutton2.commands.prefix.name = Префикс для команд
+setting.adminbutton2.interaction.interaction_cooldown_milliseconds.name = Время ожидания между взаимодействиями
 setting.adminbutton2.settings.override_chatfrag.name = Использовать ChatFragment из мода
 setting.adminbutton2.settings.override_input_handler.name = Использовать InputHandler из мода
 setting.adminbutton2.settings.pause_building_button.name = Кнопка для приостановления строительства
