Improve bundles for selecting buildings for communication

--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -25,7 +25,7 @@ adminbutton2.command.sc.description = Отправить секретное/сл
 adminbutton2.command.sm.description = Оптравить секретное сообщение через выбранную постройку.
 adminbutton2.command.smt.description = Переключить режим отправления сообщеней через выбранную постройку.
 adminbutton2.communication.playerSharedSchematic = {0}[white] делится схемой
-adminbutton2.communication.selectBuilding = Постройка не выбрана. Что бы выбрать постройку нужно нажать на ее. Можно выбрать только блоки сообщения.
+adminbutton2.communication.selectBuilding = Постройка не выбрана. Что бы выбрать постройку нужно нажать на ее. Можно выбрать блоки процессора, сообщения и холста.
 adminbutton2.communication.sendSchematicFromClipboard = Отправить схему из буфера обмена
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
