--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -47,6 +47,7 @@ adminbutton2.secrets.title = Секреты
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Минимальное количество предметов в ядре
 setting.adminbutton2.commands.prefix.name = Префикс для команд
 setting.adminbutton2.interaction.interaction_cooldown_milliseconds.name = Время ожидания между взаимодействиями
+setting.adminbutton2.settings.block_replacer.enabled.name = Другое размещение блоков для некоторых блоков
 setting.adminbutton2.settings.override_chatfrag.name = Использовать ChatFragment из мода
 setting.adminbutton2.settings.override_input_handler.name = Использовать InputHandler из мода
 setting.adminbutton2.settings.pause_building_button.name = Кнопка для приостановления строительства
