--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -45,6 +45,7 @@ adminbutton2.panelconfig.title = Настроить панель
 adminbutton2.pause_building = Приостановить
 adminbutton2.secrets.chat_warning = Эта кнопка отправляет сообщения в чат
 adminbutton2.secrets.title = Секреты
+keybind.adminbutton2.static_camera.name = Статическая камера
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Минимальное количество предметов в ядре
 setting.adminbutton2.commands.prefix.name = Префикс для команд
 setting.adminbutton2.interaction.interaction_cooldown_milliseconds.name = Время ожидания между взаимодействиями
