--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -28,6 +28,7 @@ adminbutton2.command.sn.description = Отправить обычное сооб
 adminbutton2.communication.playerSharedSchematic = {0}[white] делится схемой
 adminbutton2.communication.selectBuilding = Постройка не выбрана. Что бы выбрать постройку нужно нажать на ее. Можно выбрать блоки процессора, сообщения и холста.
 adminbutton2.communication.sendSchematicFromClipboard = Отправить схему из буфера обмена
+adminbutton2.consoledialog.title = Консоль
 adminbutton2.controller.automatic_movement = Автоматическое движение
 adminbutton2.controller.automatic_movement.mine = Добывать
 adminbutton2.controller.enable_controller = Включить управление
